[package]
name = "code-statistics"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
futures-concurrency = "7.6.2"
parking_lot = "0.12.3"
serde = { version = "1.0.215", features = ["derive"] }
smol = "2.0.2"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zbus = "5.7.1"

[workspace]
members = ["utils"]
